# datastore

./: Cargo.toml  README.md
.github/workflows/: rust.yml
datastore/: Cargo.toml
datastore-test/: Cargo.toml
datastore-test/tests/: test_derive_storedata.rs
datastore-test/tests/support/: mod.rs  types.rs
datastore/src/: lib.rs  wrapper.rs
datastore_derive/: Cargo.toml
datastore_derive/src/: lib.rs  storedata.rs
