[package]
name = "datastore_derive"
version = "0.1.0"
edition = "2021"

description = "Derive macros for datastore"

authors = ["MrGunflame <mrgunflame@protonmail.com>"]
license = "MIT OR Apache-2.0"

publish = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.92", features = ["extra-traits"] }
quote = "1.0.18"
proc-macro2 = "1.0.37"
